# Diagnostics

./: CMakeLists.txt  README.md  build_server.sh  cpu.cpp  cpu.h  install.sh  main.cpp  proc.cpp  proc.h  ram.cpp  ram.h  start.sh
templates/: index.html
